topicの情報に、user名が表示されるように調整。

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @topic.user_id %>
+  <%= @topic.user.name %>
 </p>
 
 <%= link_to 'Edit', edit_topic_path(@topic) %> |
