--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= topic.title %></td>
         <td><%= topic.content %></td>
-        <td><%= topic.user_id %></td>
+        <td><%= topic.user.name %></td>
         <td><%= link_to 'Show', topic %></td>
         <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
         <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
