--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 
       <li><%= link_to '記事一覧', topics_path %></li>
       <li><%= link_to 'ユーザー一覧', users_path if user_signed_in? %></li>
+      <li><%= link_to 'メッセージ', conversations_path if user_signed_in? %></li>
       <li><%= link_to 'マイページ', edit_user_registration_path %></li>
       <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
     <% else %>
