--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,3 +1,66 @@
-<h1>Top#index</h1>
-<p>TOPページです。</p>
-<%= profile_img(@user) if profile_img(@user) %>
+<div class="well">
+  <form class="form">
+    <h4>Sign-up</h4>
+    <div class="input-group text-center">
+      <input type="text" class="form-control input-lg" placeholder="Enter your email address">
+      <span class="input-group-btn"><button class="btn btn-lg btn-primary" type="button">OK</button></span>
+    </div>
+  </form>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-heading"><a href="https://www.bootply.com/render/96266#" class="pull-right">View all</a> <h4>Bootply Editor &amp; Code Library</h4></div>
+  <div class="panel-body">
+    <p><img src="./Bootply/150x150" class="img-circle pull-right"> <a href="https://www.bootply.com/render/96266#">The Bootstrap Playground</a></p>
+    <div class="clearfix"></div>
+    <hr>
+    Design, build, test, and prototype using Bootstrap in real-time from your Web browser. Bootply combines the power of hand-coded HTML, CSS and JavaScript with the benefits of responsive design using Bootstrap. Find and showcase Bootstrap-ready snippets in the 100% free Bootply.com code repository.
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-heading"><a href="https://www.bootply.com/render/96266#" class="pull-right">View all</a> <h4>Stackoverflow</h4></div>
+  <div class="panel-body">
+    <img src="./Bootply/150x150" class="img-circle pull-right"> <a href="https://www.bootply.com/render/96266#">Keyword: Bootstrap</a>
+    <div class="clearfix"></div>
+    <hr>
+
+    <p>If you're looking for help with Bootstrap code, the <code>twitter-bootstrap</code> tag at <a href="http://stackoverflow.com/questions/tagged/twitter-bootstrap">Stackoverflow</a> is a good place to find answers.</p>
+
+    <hr>
+    <form>
+      <div class="input-group">
+        <div class="input-group-btn">
+          <button class="btn btn-default">+1</button><button class="btn btn-default"><i class="glyphicon glyphicon-share"></i></button>
+        </div>
+        <input type="text" class="form-control" placeholder="Add a comment..">
+      </div>
+    </form>
+
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-heading"><a href="https://www.bootply.com/render/96266#" class="pull-right">View all</a> <h4>Portlet Heading</h4></div>
+  <div class="panel-body">
+    <ul class="list-group">
+      <li class="list-group-item">Modals</li>
+      <li class="list-group-item">Sliders / Carousel</li>
+      <li class="list-group-item">Thumbnails</li>
+    </ul>
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-thumbnail"><img src="./Bootply/bg_4.jpg" class="img-responsive"></div>
+  <div class="panel-body">
+    <p class="lead">Social Good</p>
+    <p>1,200 Followers, 83 Posts</p>
+
+    <p>
+    <img src="./Bootply/photo.jpg" width="28px" height="28px">
+    <img src="./Bootply/photo(1).jpg" width="28px" height="28px">
+    <img src="./Bootply/photo(2).jpg" width="28px" height="28px">
+    </p>
+  </div>
+</div>
