user profileが表示されるように修正。

--- a/app/views/common/_profile.html.erb
+++ b/app/views/common/_profile.html.erb
@@ -1,12 +1,11 @@
 <div class="panel panel-default">
-  <div class="panel-thumbnail"><img src="./Bootply/bg_5.jpg" class="img-responsive"></div>
+  <div class="panel-thumbnail">
+    <%= profile_img(user) %>
+  </div>
   <div class="panel-body">
-    <p class="lead">Urbanization</p>
-    <p>45 Followers, 13 Posts</p>
 
-    <p>
-    <img src="./Bootply/uFp_tsTJboUY7kue5XAsGA=s28" width="28px" height="28px">
-    </p>
+    <p class="lead"><%= user.name %></p>
+    <p>ここにフォロワー数、記事数など / 45 Followers, 13 Posts</p>
   </div>
 </div>
 
