記事投稿、コメント機能のデザイン終了。

--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Topic</h1>
+<div class="well">
+  <h4>記事編集</h4>
+</div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @topic %> |
 <%= link_to 'Back', topics_path %>
+
+
