--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.text_field :content, placeholder: "内容", class: "form-control"  %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit '送信', class: 'btn btn-default' %>
   </div>
 <% end %>
 
