--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,16 +1,15 @@
-<p id="notice"><%= notice %></p>
-<div class="child row">
-  <div class="wrapper col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
-    <div class="topic-text">
-      <p class="left"><strong>タイトル</strong></p>
-      <p class="left"><%= @topic.title %></p>
-      <p class="left"><strong>内容</strong></p>
-      <p class="left"><%= @topic.content %></p>
-      <p class="right">
-        <strong>作成時間:</strong>
-        <%= @topic.created_at.strftime("%y/%m/%d %p %l:%M") %>
-      </p>
-    </div>
+<div class="well">
+  <form class="form">
+    <h4>記事詳細</h4>
+  </form>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-heading"><a href="https://www.bootply.com/render/96266#" class="pull-right">View all</a> <h4><%= @topic.title %></h4></div>
+  <div class="panel-body">
+    <p><%= @topic.content %></p>
+    <div class="clearfix"></div>
+    <hr>
     <p>コメント一覧</p>
     <div id="comments_area">
       <%= render partial: 'comments/index', locals: { comments: @comments, topic: @topic } %>
