--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,29 @@
-<div class="container">
-  <h2>ユーザー</h2>
-  <% @users.each do |user| %>
-    <div class="container-child col-md-2 col-sm-4 col-xs-6 ">
-      <% if user.id != current_user.id %>
-        <li>
-          <div class="item">
-            <%= profile_img(user) %>
-            <%= link_to user.name, user %>
-            <%= link_to 'メッセージ', conversations_path(sender_id: current_user.id, recipient_id: user.id), method: 'post' %>
-          </div>
-          <%= render partial: 'follow_form', locals: {user: user} if signed_in? %>
-        </li>
-      <% end %>
-    <% end %>
-    </div>
-    </div>
+<% @users.each do |user| %>
+  <% if user.id != current_user.id %>
+    <div class="panel panel-default">
 
+      <div class="panel-heading">
+        <h4>
+          <%= user.name %>
+        </h4>
+      </div>
+      <div class="panel-body">
+        <%= profile_img(user) %>
+        <a href="https://www.bootply.com/render/96266#">
+          <%= link_to user.name, user %>
+        </a>
+        <div class="clearfix"></div>
+        <hr>
+        <ul class="list-unstyled">
+          <li>
+            <%= link_to 'メッセージ', conversations_path(sender_id: current_user.id, recipient_id: user.id), method: 'post' %>
+          </li>
+          <li>
+            <%= render partial: 'follow_form', locals: {user: user} if signed_in? %>
+          </li>
+        </ul>
+      </div>
+    </div>
+  <% end %>
+<% end %>
+</div>
