--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -3,32 +3,35 @@
   <%= link_to '以前のメッセージ', '?m=all' %>
 <% end %>
 
-<div class="ui segment">
-  <% @messages.each do |message| %>
-    <% if message.body %>
-      <% user = User.find(message.user_id) %>
-      <div class="item">
-        <div class="content">
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h4>メッセージ</h4>
+  </div>
+  <div class="panel-body">
+      <% @messages.each do |message| %>
+        <% if message.body %>
+          <% user = User.find(message.user_id) %>
           <div class="header"><strong><%= user.name %></strong> <%= message.message_time %></div>
-          <div class="list">
-            <div class="item">
-              <i class="right triangle icon"></i>
-              <%= message.body %>
-            </div>
-          </div>
-        </div>
-      </div>
-    <% end %>
-  <% end %>
+          <%= message.body %>
+        <% end %>
+        <hr>
+      <% end %>
+  </div>
 </div>
 
-<%= form_for [@conversation, @message], html: {class: "ui reply form"} do |f| %>
-  <div class="field">
-    <%= f.text_area :body, class: "form-control" %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    メッセージ送信
   </div>
-    <%= f.text_field :user_id, value: current_user.id, type: "hidden"  %>
-  <div>
-    <%= f.submit "メッセージを送る" %>
+  <div class="panel-body">
+    <%= form_for [@conversation, @message], html: {class: "ui reply form"} do |f| %>
+      <div class="field">
+        <%= f.text_area :body, class: "form-control" %>
+      </div>
+      <%= f.text_field :user_id, value: current_user.id, type: "hidden"  %>
+      <div>
+        <%= f.submit "メッセージを送る", class: 'btn btn-sm btn-default' %>
+      </div>
+    <% end %>
   </div>
-
-<% end %>
+</div>
