--- a/app/views/common/_topnav.html.erb
+++ b/app/views/common/_topnav.html.erb
@@ -20,15 +20,10 @@
     </form>
     <ul class="nav navbar-nav">
       <li>
-        <a href="https://www.bootply.com/render/96266#"><i class="glyphicon glyphicon-home"></i> Home</a>
-      </li>
-      <li>
-        <a href="https://www.bootply.com/render/96266#postModal" role="button" data-toggle="modal"><i class="glyphicon glyphicon-plus"></i> Post</a>
-      </li>
-      <li>
-        <a href="https://www.bootply.com/render/96266#"><span class="badge">badge</span></a>
+        <%= link_to "TOPページ", topics_path %>
       </li>
     </ul>
+    <!--
     <ul class="nav navbar-nav navbar-right">
       <li class="dropdown">
         <a href="https://www.bootply.com/render/96266#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i></a>
@@ -41,6 +36,7 @@
         </ul>
       </li>
     </ul>
+    -->
   </nav>
 </div>
 <!-- /top nav -->
