--- a/app/views/common/_profile.html.erb
+++ b/app/views/common/_profile.html.erb
@@ -1,10 +1,12 @@
-<div class="panel panel-default">
-  <div class="panel-thumbnail">
-    <%= profile_img(user) %>
-  </div>
-  <div class="panel-body">
+<% if user_signed_in? %>
+  <div class="panel panel-default">
+    <div class="panel-thumbnail">
+      <%= profile_img(user) %>
+    </div>
+    <div class="panel-body">
 
-    <p class="lead"><%= user.name %></p>
-    <p>ここにフォロワー数、記事数など / 45 Followers, 13 Posts</p>
+      <p class="lead"><%= user.name %></p>
+      <p>ここにフォロワー数、記事数など / 45 Followers, 13 Posts</p>
+    </div>
   </div>
-</div>
+<% end %>
