noticeを追加＆記事のプロパティを日本語化

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
 
                   <!-- main col right -->
                   <div class="col-sm-7">
+                    <p><%= notice %></p>
                     <!-- ここにメインコンテンツが入る -->
                     <%= yield %>
                   </div>
