--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="panel panel-default">
-  <div class="panel-heading"><a href="https://www.bootply.com/render/96266#" class="pull-right">View all</a> <h4><%= @topic.title %></h4></div>
+  <div class="panel-heading"><h4><%= @topic.title %></h4></div>
   <div class="panel-body">
     <p><%= @topic.content %></p>
     <div class="clearfix"></div>
