不要なリンクを削除。

--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
   <div class="panel panel-default">
-    <div class="panel-heading"><a href="https://www.bootply.com/render/96266#" class="pull-right">View all</a> <h4><%= @topic.title %></h4></div>
+    <div class="panel-heading"><h4><%= @topic.title %></h4></div>
     <div class="panel-body">
 
       <div class="field">
