userの不要なリンクを削除。

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,8 +9,7 @@
       </div>
       <div class="panel-body">
         <%= profile_img(user) %>
-        <a href="https://www.bootply.com/render/96266#">
-          <%= link_to user.name, user %>
+        <%= user.name %>
         </a>
         <div class="clearfix"></div>
         <hr>
